--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,6 @@
-name: Run Selenium Script
-
-on:
-  workflow_dispatch:
-
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -17,16 +11,22 @@ jobs:
         python-version: '3.x'
 
     - name: Install dependencies
-      run: |
-        pip install selenium
+      run: pip install selenium
 
     - name: Setup Chrome
       run: |
         sudo apt-get update
         sudo apt-get install -y google-chrome-stable
 
-    - name: Setup Chrome Driver
-      uses: nanasess/setup-chromedriver@master
+    - name: Setup ChromeDriver
+      run: |
+        CHROME_VERSION=$(google-chrome-stable --version | grep -oE "[0-9]+.[0-9]+.[0-9]+")
+        DRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE_$CHROME_VERSION")
+        wget "https://chromedriver.storage.googleapis.com/$DRIVER_VERSION/chromedriver_linux64.zip"
+        unzip chromedriver_linux64.zip
+        sudo mv chromedriver /usr/bin/chromedriver
+        sudo chown root:root /usr/bin/chromedriver
+        sudo chmod +x /usr/bin/chromedriver
 
     - name: Run script
-      run: python N_tik.py
+      run: python your_script.py
