--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,9 @@ jobs:
           python-version: '3.x'
 
     - name: Install dependencies
-      run: pip install selenium
+      run: |
+        pip install selenium
+        pip freeze
 
         
     - name: Remove existing Chromium
