--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,13 +20,14 @@ jobs:
     - name: Install dependencies
       run: |
         pip install selenium
-    
-    - name: Install Chromium
-      if: steps.cache-chromium.outputs.cache-hit != 'true'
+
+　  - name: Set up Selenium and Chromium
+      #if: steps.cache-chromium.outputs.cache-hit != 'true'
       run: |
         sudo apt-get update
-        sudo apt-get install -y chromium-browser
-        chromium-browser --version # これでバージョンを確認できるよ😊
+        sudo apt-get install -y chromium-chromedriver
+        sudo cp /usr/lib/chromium-browser/chromedriver /usr/bin
+        #chromium-browser --version # これでバージョンを確認できるよ😊
 
         
     - name: Find Chromium Path
