--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,8 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y chromium-chromedriver
-        sudo cp /usr/lib/chromium-browser/chromedriver /usr/bin
+        #sudo cp -f /usr/lib/chromium-browser/chromedriver /usr/bin
+
         #chromium-browser --version # これでバージョンを確認できるよ😊
 
         
