--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,7 @@ jobs:
         #sudo cp -f /usr/lib/chromium-browser/chromedriver /usr/bin
 
         #chromium-browser --version # これでバージョンを確認できるよ😊
-
-        
+   
     - name: Find Chromium Path
       run: |
         which chromium-browser
@@ -44,6 +43,15 @@ jobs:
     - name: Check Chromium Version
       run: chromium-browser --version
       
+    - name: Install Chrome
+      run: |
+        wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+        sudo dpkg -i google-chrome-stable_current_amd64.deb
+        google-chrome-stable --version
+
+    - name: Set Chrome Binary Path
+      run: echo "CHROME_BIN=/usr/bin/google-chrome-stable" >> $GITHUB_ENV
+    
     - name: Run script
       run: python N_tik.py
       timeout-minutes: 10
