--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,19 +20,12 @@ jobs:
     - name: Install dependencies
       run: |
         pip install selenium
-        
-    - name: Get Chromium Version
-      id: chromium_version
-      run: |
-        CHROMIUM_VERSION=$(chromium-browser --version | awk '{ print $2 }' | sed 's/\..*//')
-        echo "CHROMIUM_VERSION=$CHROMIUM_VERSION" >> $GITHUB_ENV
 
     - name: Install Compatible Chromedriver
       run: |
         sudo apt-get update
-        sudo apt-get install -y chromium-chromedriver=$CHROMIUM_VERSION.*
-        #chromium-browser --version # これでバージョンを確認できるよ😊
-   
+        sudo apt-get install -y chromium-chromedriver
+
     - name: Find Chromium Path
       run: |
         which chromium-browser
@@ -45,20 +38,7 @@ jobs:
         
     - name: Check Chromium Version
       run: chromium-browser --version
-      
 
-    
     - name: Run script
       run: python N_tik.py
       timeout-minutes: 10
-
-    #- name: Commit and push changes
-    #  run: |
-    #    git config --local user.email "action@github.com"
-    #    git config --local user.name "GitHub Action"
-    #    git add N_tik.xml
-    #    git commit -m "Update schedule RSS feed" || exit 0 # 変更がない場合はエラーを無視
-    #    git push
-
-
-      
