--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,10 @@
 name: Run Selenium Script
 on:
   workflow_dispatch:
-  
+  schedule:
+    # 日本時間で10時から25時（協定世界時で毎日、1時から4時、10時から16時）まで3時間ごとに実行
+    - cron: '0 1-4/3,10-16/3 * * *'   
+    
 jobs:
   build:
     runs-on: ubuntu-latest
